--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Games</h1>
-  <ul><a href="maze.html">Maze</a></ul>
+  <ul><a href="html/maze.html">Maze</a></ul>
 </body>
 </html>
