--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1>Games</h1>
-  <ul><a href="html/maze.html">Maze</a></ul>
+  <ul>
+    <li><a href="html/maze.html">Maze</a></li>
+  </ul>
 </body>
 </html>
