--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <h1>Games</h1>
   <ul>
     <li><a href="html/maze.html">Maze</a></li>
+    <li><a href="html/brick-breaker.html">Brick Breaker</a></li>
+    
   </ul>
 </body>
 </html>
