--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
   <h1>Games</h1>
-  <ul>
-    <li><a href="html/maze.html">Maze</a></li>
-    <li><a href="html/brick-breaker.html">Brick Breaker</a></li>
-    <li></li>
-  </ul>
+    <a href="html/maze.html">Maze</a>
+    <a href="html/brick-breaker.html">Brick Breaker</a>
 </body>
 </html>
