--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1>Games</h1>
     <a href="html/maze.html">Maze</a>
     <a href="html/brick-breaker.html">Brick Breaker</a>
-    <a href="html/brick-breaker.html">Tetris</a>
+    <a href="html/tetris.html">Tetris</a>
 </body>
 </html>
