--- a/html/maze.html
+++ b/html/maze.html
@@ -94,7 +94,7 @@
     <button onclick="generateMaze(30)">Normal (30 x 30)</button>
     <button onclick="generateMaze(50)">Hard (50 x 50)</button>
     <button onclick="generateMaze(100)">Hell (100 x 100)</button>
-    <button onclick="print()">인쇄하기</button>
+    <button onclick="print()">Print</button>
   </div>
   <script>
     const range = (n) => Array.from({ length: n }).map((_, i) => i);
