--- a/html/brick-breaker.html
+++ b/html/brick-breaker.html
@@ -604,7 +604,7 @@
       gameOver() {
         fillRect(0, height / 2 - 100, width, 200, "rgba(0, 0, 0, 0.3)");
         ctx.font = "40px Arial";
-        ctx.fillText("패배!", width / 2 - 40, height / 2 + 12);
+        ctx.fillText("You Lost!", width / 2 - 40, height / 2 + 12);
         ctx.font = "20px Arial";
       }
     }
